Fix loading indicator pushing profile ring off screen

--- a/styles/home/Profile.module.scss
+++ b/styles/home/Profile.module.scss
@@ -97,6 +97,7 @@
 }
 
 .loading-indicator {
+  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
